--- a/pkg/config/testdata/defaults.toml
+++ b/pkg/config/testdata/defaults.toml
@@ -1,10 +1,12 @@
 [pipeline]
 # depth_limit            = 16
 # tx_delay               = 0
+# threshold_divisor      = 4
+# max_fee_toleration_usd = 0
 
 [coinmarketcap]
+# api_key_path           = "~/.coinmarketcapkey"
 # api_url                = "https://pro-api.coinmarketcap.com"
-# api_key_path           = "~/.coinmarketcap"
 # cache_expiry           = "5s"
 
 [eth]
@@ -12,14 +14,11 @@ node_address           = "https://someaddress.test"
 spender_key_path       = "~/some.key"
 erc20_contract_address = "0x1111111111111111111111111111111111111111"
 # owner                  = ""
-# max_gas                = "70_000_000_000"
-# gas_tip_cap            = "1_000_000_000"
 
 [zksync-era]
 node_address           = "https://mainnet.era.zksync.io"
 spender_key_path       = "~/some.key"
 erc20_contract_address = "0x2222222222222222222222222222222222222222"
 # chain_id               = 324
-# max_fee                = ""
 # paymaster_address      = ""
 # paymaster_payload      = ""
